--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes in 2.5.1
+----------------
+
+  * Fix potential failure during firmware loading. The bug was introduced in
+    2.5.
+
 Changes in 2.5
 --------------
 
