doc: update CHANGES with 2.13.1

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes in 2.13.1
+-----------------
+
+  * Fix two races in EasyConnect processing
+  * Accept new PDS format used in the kernel upstream
+
 Changes in 2.13
 ---------------
 
