doc: update CHANGES with 2.13.2

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Changes in 2.13.2
+-----------------
+
+  * Fix scan with WFM200 parts and World Wide regulation
+
 Changes in 2.13.1
 -----------------
 
